--- a/scss/about/about.scss
+++ b/scss/about/about.scss
@@ -5,6 +5,7 @@
     margin-right: auto;
 
     .title {
+        font-family: 'Coming Soon', cursive;
         width: 171px;
         font-size: 22px;
         border-bottom: 2px solid black;
@@ -28,6 +29,7 @@
 }
 
     .client-title {
+        font-family: 'Coming Soon', cursive;
         border-bottom: 2px solid black;
         width: 310px;
         height: 45px;
