--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,3 +6,6 @@
 @import "components/componentsHome.scss";
 @import "structureHome.scss";
 @import "home/homeHome.scss";
+@import "specialOffers.scss";
+@import "blog.scss";
+@import "contact.scss";
