--- a/css/styles.css
+++ b/css/styles.css
@@ -10,70 +10,6 @@ body {
   height: 100%;
 }
 
-footer {
-  width: 67.9%;
-  height: 70px;
-  background-color: #79ADDC;
-  padding-top: 15px;
-  margin: 0 auto;
-}
-footer img {
-  position: absolute;
-  right: 0;
-  margin-top: -35px;
-  margin-right: 23%;
-}
-
-.travel {
-  margin-left: 10%;
-  width: 92px;
-  height: 42px;
-  border: 2px solid white;
-}
-.travel p {
-  color: white;
-  font-size: 20px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  letter-spacing: 1.88px;
-  margin-top: 20px;
-}
-
-#foot {
-  color: white;
-  text-align: center;
-  margin-top: -30px;
-  width: 300px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@media only screen and (max-width: 1115px) {
-  #foot {
-    width: 200px;
-    height: 70px;
-    position: relative;
-    margin-top: -57px;
-    padding-top: 17px;
-  }
-
-  footer img {
-    margin-top: -60px;
-  }
-}
-@media only screen and (max-width: 950px) {
-  #foot {
-    width: 110px;
-    height: 70px;
-    position: relative;
-    margin-top: -57px;
-    padding-top: 10px;
-  }
-
-  footer img {
-    margin-top: -60px;
-    margin-right: 17%;
-  }
-}
 .headerTourPages {
   width: 51.2%;
   margin: 0 auto;
@@ -831,18 +767,18 @@ footer {
   height: 70px;
   background-color: #79ADDC;
   padding-top: 15px;
-  width: 67.5%;
+  width: 100%;
   margin: 0 auto;
 }
 footer img {
   position: absolute;
   right: 0;
   margin-top: -55px;
-  margin-right: 23%;
+  margin-right: 25%;
 }
 
 .travel {
-  margin-left: 10%;
+  margin-left: 25%;
   width: 92px;
   height: 42px;
   border: 2px solid white;
@@ -908,7 +844,7 @@ footer img {
     margin-left: 208px;
   }
 }
-@media only screen and (max-width: 1115px) {
+@media only screen and (max-width: 1200px) {
   #foot {
     width: 200px;
     height: 70px;
@@ -920,19 +856,12 @@ footer img {
   footer img {
     margin-top: -80px;
   }
-}
-@media only screen and (max-width: 950px) {
-  #foot {
-    width: 110px;
-    height: 70px;
-    position: relative;
-    margin-top: -57px;
-    padding-top: 10px;
-  }
 
+  footer .travel {
+    margin-left: 15%;
+  }
   footer img {
-    margin-top: -80px;
-    margin-right: 17%;
+    margin-right: 13%;
   }
 }
 .special {
