--- a/scss/home/homeHome.scss
+++ b/scss/home/homeHome.scss
@@ -272,7 +272,7 @@ footer {
     height: 70px;
     background-color: #79ADDC;
     padding-top: 15px;
-    width: 67.5%;
+    width: 100%;
     margin: 0 auto;
 
 
@@ -281,12 +281,12 @@ footer {
         position: absolute;
         right: 0;
         margin-top: -55px;
-        margin-right: 23%;
+        margin-right: 25%;
     }
 }
 
 .travel {
-    margin-left: 10%;
+    margin-left: 25%;
     width: 92px;
     height: 42px;
     border: 2px solid white;
@@ -361,7 +361,7 @@ footer {
 }
 
 
-@media only screen and (max-width: 1115px) {
+@media only screen and (max-width: 1200px) {
 
     #foot {
         width: 200px;
@@ -377,22 +377,13 @@ footer {
         }
     }
 
-}
-
-@media only screen and (max-width: 950px) {
-
-    #foot {
-        width: 110px;
-        height: 70px;
-        position: relative;
-        margin-top: -57px;
-        padding-top: 10px;
-    }
-
     footer {
+        .travel {
+            margin-left: 15%;
+        }
+
         img {
-            margin-top: -80px;
-            margin-right: 17%;
+            margin-right: 13%;
         }
     }
 
